--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,10 @@ pipeline {
         FLY_API_TOKEN = credentials('FLY_API_TOKEN_TEST')
     }
 
+    tools {
+        nodejs "nodejs18" // Cambia aquí según el nombre correcto en Jenkins
+    }
+
     triggers {
         githubPush()
     }
