--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     }
 
     tools {
-        nodejs "nodejs18" // Cambia aquí según el nombre correcto en Jenkins
+        nodejs "nodejs18" // Cambia  2 aquí según el nombre correcto en Jenkins
     }
 
     triggers {
